Closed
Bug 804828
Opened 13 years ago
Closed 13 years ago
Talagent trips ValidWriteAssert (when Firefox tries to restart in safe mode due to previous crashes)
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: jruderman, Assigned: espindola)
References
(Depends on 1 open bug)
Details
(Keywords: assertion)
Attachments
(3 files)
Assertion failure: ok, at /Users/jruderman/trees/mozilla-central/xpcom/build/mozPoisonWriteMac.cpp:54
| Reporter | ||
Updated•13 years ago
|
| Assignee | ||
Comment 1•13 years ago
|
||
Can you put a breakpoint in mozilla::PoisonWrite? Writes should only be poisoned during shutdown, but looks like they are being poisoned during startup in your case!
| Reporter | ||
Comment 2•13 years ago
|
||
I think it's shutting down early in order to restart itself in safe mode.
| Assignee | ||
Updated•13 years ago
|
Status: NEW → ASSIGNED
QA Contact: respindola
| Assignee | ||
Comment 3•13 years ago
|
||
For the exit(0) work we only need to check the writes in a regular shutdown. Avoid poisoning during other paths.
In the future the point where we poison will hopefully be before ShutdownXPCOM, but for now we need a way to tell mozilla::PoisonWrite to avoid patching the writes.
Attachment #676759 -
Flags: review?(ted)
Updated•13 years ago
|
Attachment #676759 -
Flags: review?(ted) → review+
Updated•13 years ago
|
Assignee: nobody → respindola
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•