Bug 804828 - Talagent trips ValidWriteAssert (when Firefox tries to restart in safe mode due to previous crashes). r=ted.